Initial commit for token node
added wws-authorize to support authenticate on behalf of the user

--- a/wws-message-post/wws-message-post.html
+++ b/wws-message-post/wws-message-post.html
@@ -184,7 +184,7 @@
         inputs:1,
         outputs:1,
         icon: "wws.png",
-        align: "right",
+        align: "left",
         label: function() {
         		return this.name || "send message as app";
         },
