--- a/wws-graphql/wws-graphql.html
+++ b/wws-graphql/wws-graphql.html
@@ -957,7 +957,7 @@ msg.payload = `
 </script>
 
 <script type="text/x-red" data-help-name="wws-getPeople">
-  <p>This node provides a tool to easily retriev all the details for a set of people.
+  <p>This node provides a tool to easily retrieve all the details for a set of people.
     <br>
     The set of people can be specified as a set of <b>email addresses</b> or <b>names</b> or <b>IDs</b>
   </p>
