Bug in WebHook UI

--- a/wws-webhook/wws-webhook.html
+++ b/wws-webhook/wws-webhook.html
@@ -32,11 +32,11 @@
                     value: false,
                     required: false
             },
-            o_spaceMembersRemoved : {
+            o_spaceMemberRemoved : {
                     value: false,
                     required: false
             },
-            o_spaceMembersAdded : {
+            o_spaceMemberAdded : {
                     value: false,
                     required: false
             },
