new Get Message Node

--- a/wws-message-post/wws-message-post.html
+++ b/wws-message-post/wws-message-post.html
@@ -188,7 +188,7 @@
         label: function() {
         		return this.name || "send message as app";
         },
-        paletteLabel: "message",
+        paletteLabel: "Send Message",
         oneditprepare: function() {
             function verifyInput(fileInputField) {
                 return fileInputField[0].files.length>0;
