--- a/wws-graphql/wws-graphql.html
+++ b/wws-graphql/wws-graphql.html
@@ -122,6 +122,81 @@ msg.payload = `
 </script>
 
 <script type="text/javascript">
+  RED.nodes.registerType("wws-getMessage", {
+    category: 'Watson Work',
+    icon: "wws.png",
+    color: "#11ABA5",
+    align: "center",
+    defaults: {
+      name: {
+        value: ""
+      },
+      application: {
+        value: "",
+        type: "wws-credentials"
+      },
+      wwsMessageId: {
+        value: ''
+      }
+    },
+    inputs: 1,
+    outputs: 1,
+    label: function () {
+      return this.name || "Get Message";
+    },
+    paletteLabel: "Get Message"
+  });
+</script>
+
+<script type="text/x-red" data-template-name="wws-getMessage">
+  <div class="form-row">
+    <label for="node-input-application"><i class="fa fa-user"></i> App Name</label>
+    <input type="text" id="node-input-application">
+  </div>
+
+  <div class="form-row" id="wwsMessageId">
+      <label for="node-input-wwsMessageId"><i class="fa fa-eye"></i> MessageId</label>
+      <input type="text"  name="wwsMessageId" id="node-input-wwsMessageId" placeholder="Message Id : ex 5b340xxxxx84894"></input>
+  </div>
+
+  <div class="form-row">
+    <label for="node-input-name"><i class="icon-tag"></i> Name</label>
+    <input type="text" id="node-input-name" placeholder="Name">
+  </div>
+</script>
+
+<script type="text/x-red" data-help-name="wws-getMessage">
+  <p>A node that retrieves all the information about a given Message.</p>
+  <h3>Inputs</h3>
+  <dl class="message-properties">
+      <dt>wwsMessageId <span class="property-type">string</span></dt>
+      <dd>The Id of the message to be retrieved.</dd>
+      
+      <dt class="optional">wwsToken <span class="property-type">string</span></dt>
+      <dd>Access Token received during an Outh Flow (e.g. Authenticate on behalf of a user). This will override the existing access token for the configured workspace application(s) for this particular message.</dd>
+  </dl>
+  <h3>Details</h3>
+  <p>This node sends a <a href="https://graphql.org/learn/" target="_blank">qraphQl query</a> to Watson Work Services. This allows to extract additional information in the context of the application from Watson Work Services. Check the <a href="https://developer.watsonwork.ibm.com/tools/graphql" target="_blank">GraphqL Tool</a> for further information.<br/>
+      Provide the following information:
+  </p>
+  <dl class="message-properties">
+      <dt>App Name</dt>
+          <dd>The configured name for a specific Watson Work App.</dd>
+      <dt>Message Id <span class="property-type">string</span></dt>
+          <dd>The Id of the message to be retrieved. It superseeds the value of the incoming <code>msg.wwsMessageId</code> if present</dd>
+      </dl>
+  <h3>References</h3>
+  <ul>
+      <li><a href="https://developer.watsonwork.ibm.com/docs/api-reference/" target="_blank">Watson Work API</a> - Reference Documentation</li>
+      <li><a href="https://developer.watsonwork.ibm.com/docs/api-reference/graph-ql-with-json" target="_blank">GraphQL with JSON</a> - Reference Documentation for sending a GraphQL query.</li>
+      <li><a href="https://developer.watsonwork.ibm.com/tools/graphql" target="_blank">GraphQL Tool</a> - Tool to test your GraphQL query. Attention: the query will be executed within the user context.</li>
+      <li><a href="https://developer.watsonwork.ibm.com/docs/get-started/what-can-you-build" target="_blank">Getting Started</a> - Guide to be used as starting point</li>
+      <li>TODO: <a>GitHub</a> - the nodes github repository</li>
+  </ul>
+</script>
+
+
+<script type="text/javascript">
   var parExp = /(.*?)\s\((.*?)\)/;
   RED.nodes.registerType("wws-validateActions", {
     category: 'Watson Work',
