Fixing issues with MessagePost

--- a/wws-message-post/wws-message-post.html
+++ b/wws-message-post/wws-message-post.html
@@ -107,7 +107,7 @@
             <span class="property-type">string | markdown</span>
         </dt>
         <dd>The message to be posted to a space.</dd>
-        <dt class="optional">spaceId <span class="property-type">string</span></dt>
+        <dt class="optional">wwsSpaceId <span class="property-type">string</span></dt>
         <dd> The space id to which the message should be posted to. The app must be a member of that space.</dd>
         <dt class="optional">title <span class="property-type">string</span></dt>
         <dd> The title (in bold) to be displayed above the message.</dd>
