--- a/wws-message-post/wws-message-post.html
+++ b/wws-message-post/wws-message-post.html
@@ -158,7 +158,7 @@
         <dt class="optional">Picture</dt>
             <dd>In case a custom profile photo should be shown next to a message, uplaod a JPEG file not larger than 200kB. You will receive a status message after you clicked the upload button.</dd>
         <dt class="optional">Space ID</dt>
-            <dd>The space ID to which this message should be send to. This can be overriden by <code>msg.spaceId</code></dd>
+            <dd>The space ID to which this message should be send to. This can be overriden by <code>msg.wwsSpaceId</code></dd>
     </dl>
     <h3>References</h3>
     <ul>
