BugFixing - Rework for storage.

--- a/wws-credentials/wws-credentials.html
+++ b/wws-credentials/wws-credentials.html
@@ -184,6 +184,11 @@
             clientSecret: {value:"", required:true},
             tokenType:{value:"bot", required:true}
         },
+        credentials: {
+            api: {type:"text"},
+            tokenType: {type:"text"},
+            token: {type: "password"}
+        },
         label: function() {
             return this.accountName;
         },
