Big Changes for 1.4

--- a/wws-file-post/wws-file-post.html
+++ b/wws-file-post/wws-file-post.html
@@ -12,9 +12,9 @@
       outputs: 1,
       icon: "wws.png",
       label: function() {
-        return this.name || "send file";
+        return this.name || "post file";
       },
-      paletteLabel: "file",
+      paletteLabel: "post file",
       align: "right",
       oneditprepare: function() {
         //Input Account
