--- a/wws-focus/wws-focus.html
+++ b/wws-focus/wws-focus.html
@@ -12,8 +12,8 @@
       label: function() {
         return this.name || "get Focus";
       },
-      paletteLabel: "Focus",
-      align: "right",
+      paletteLabel: "get Focus",
+      align: "left",
       oneditprepare: function() {
       }
     });
