Refactoring of wws-credentials
Now included features from wws-authorize node.

--- a/wws-credentials/wws-credentials.html
+++ b/wws-credentials/wws-credentials.html
@@ -181,8 +181,7 @@
         defaults: {
             accountName: {value:""},
             clientId: {value:"", required:true},
-            clientSecret: {value:"", required:true},
-            tokenType:{value:"bot", required:true}
+            clientSecret: {value:"", required:true}
         },
         credentials: {
             api: {type:"text"},
@@ -308,7 +307,7 @@
                     case "user":
                         inputRadioUser.prop("checked",true);
                         inputRadioBot.prop("checked",false);
-                        if (!init) {
+                        if (!init || !this.credentials.has_token) {
                             $('#authenticate-bot').hide();
                             $('#authenticate-user').show();
                             getCallbackUrl(wwsConfigNodeId);
@@ -318,7 +317,7 @@
                     case "bot":
                         inputRadioBot.prop("checked",true);
                         inputRadioUser.prop("checked",false);
-                        if (!init) {
+                        if (!init || !this.credentials.has_token) {
                             $('#authenticate-user').hide();
                             $('#authenticate-bot').show();
                         }
@@ -351,8 +350,9 @@
                         displayTokenInformation(response);
                         getAppName(id, $('#node-config-input-clientId').val())
                         .then((result) => {
+                            //TODO: Display error msg...
                             if (result.error) {
-                                console.error("Could not receive AppName! " + JSON.stringify(result.error));
+                                console.error("Could not receive AppName! " + result.message);
                             } else if (result.appName) {
                                 $("#node-config-input-accountName").val(result.appName);
                             } else {
@@ -388,7 +388,13 @@
                     getAppName(wwsConfigNodeId, $('#node-config-input-clientId').val())
                     .then((result) => {
                         if (result.error) {
-                            console.error("Could not receive AppName! " + JSON.stringify(result.error));
+                            console.error("Could not receive AppName! " + result.message);
+                            //sth has gone wrong: resetting...
+                            if (poller) {
+                                clearInterval(poller);
+                                poller = undefined;
+                            }
+                            switchTokenType(inputTokenType);
                         } else if (result.appName) {
                             $("#node-config-input-accountName").val(result.appName);
                         } else {
@@ -517,9 +523,9 @@
         },
         oneditdelete: function() {
             clearInterval(poller);
-            removeToken(wwsConfigNodeId)
+            removeToken(this.id)
             .then(() => {
-                console.log("Token " + wwsConfigNodeId + " has been removed");
+                console.log("Token " + this.id + " has been removed");
             });
         }
     });
