--- a/wws-webhook/wws-webhook.html
+++ b/wws-webhook/wws-webhook.html
@@ -4,7 +4,7 @@
         category: 'Watson Work',
         color:"#11ABA5",
         defaults: {
-            account: {
+            application: {
                 type: "wws-credentials",
                 required: true
             },
@@ -158,8 +158,8 @@
 
 <script type="text/x-red" data-template-name="wws-webhook">
     <div class="form-row">
-        <label for="node-input-account"><i class="fa fa-user"></i> App Name</label>
-        <input type="text" id="node-input-account">
+        <label for="node-input-application"><i class="fa fa-user"></i> App Name</label>
+        <input type="text" id="node-input-application">
     </div>
     <div class="form-row">
         <label for="node-input-webhookSecret"><i class="fa fa-user-secret"></i> Hook Secret</label>
