Feature enhancement for wws-token-viewer
- Updated help doc
- added msg.wwsToken to the output

--- a/wws-token-viewer/wws-token-viewer.html
+++ b/wws-token-viewer/wws-token-viewer.html
@@ -54,8 +54,13 @@
     <p>A node that inspects the token used to access <a href="https://workspace.ibm.com">IBM Watson Workspace</a>.</p>
     <h3>Inputs</h3>
     <dl class="message-properties">
-        <dt class="optional">refreshPeriod <span class="property-type"Number</span></dt>
+        <dt class="optional">refreshPeriod <span class="property-type">Number</span></dt>
         <dd>The period after the token should be refreshed automatically. The range is between [0, 60]. A value of '0' will not automatically refresh the token.</dd>
+    </dl>
+    <h3>Outputs</h3>
+    <dl class="message-properties">
+        <dt>wwsToken <span class="property-type">Object</span></dt>
+        <dd>The current available token - no modification if expired</dd>
     </dl>
     <h3>Details</h3>
     <p>This node inspects either on access the token configured by this node. After the given time<br/>
